--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Head Design</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Kaushan+Script&family=Volkhov:wght@700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/227af4f11b.js" crossorigin="anonymous"></script>
     </head>
 <body>
   <div class="wrapper">
@@ -21,6 +20,10 @@
         <li>Contact Us</li>
       </ul>
       </nav> 
+    </div>
+    <!--Logo-->
+    <div class="Theader-logo">
+      <img src="img-1/1FA82_color.png"  alt="logo" class="brand"> 
     </div>
     <!--Left Header-->
     <div class="Lheader">
@@ -49,5 +52,9 @@
     </div> 
      
   </header>
+  </div>
+  <script src="https://unpkg.com/popmotion@8.5.0/dist/popmotion.global.min.js"></script>  
+  <script src="https://kit.fontawesome.com/227af4f11b.js" crossorigin="anonymous"></script>
+  <script src="webpage.js"></script>
 </body>
 </html>
